# lolcode-lang

./: .gitignore  AGENTS.md  CURRENT-SPEC-NOTES-BUGS-WORRIES.md  NEXT-BOTTOM-UP-SPEC-CONCERNS-2026-03-05.md  README.md  USE_ME.md  cli.rkt  cmd.rkt  fourth-tier-of-40-issues.md  info.rkt  main.rkt  raco.rkt
corpus/: README.md  manifest.json
corpus/tier2/garthendrich-lolcode-interpreter/files/: README.md  pyproject.toml
corpus/tier2/garthendrich-lolcode-interpreter/files/sample_codes/: 08_switch.lol
corpus/tier2/garthendrich-lolcode-interpreter/files/src/: main.py
corpus/tier2/garthendrich-lolcode-interpreter/files/src/components/: abstraction_enum.py  evaluator.py  lexer.py  token_enum.py  utils.py
corpus/tier2/garthendrich-lolcode-interpreter/files/tests/: test_semantic_analyzer.py  test_syntax_analyzer.py
docs/: DISTRIBUTION.md  PACKAGE_RELEASE_CHECKLIST.md
internal/: reporting.rkt
lolcode/: main.rkt
scripts/: adjudication_index_lib.rkt  analyze_corpus_gaps.rkt  analyze_corpus_gaps.sh  analyze_external_evidence.rkt  analyze_external_evidence.sh  analyze_lexer_coverage.rkt  analyze_lexer_coverage.sh  build_adjudication_index.rkt  build_cli_exe.sh  build_external_regression_queue.sh  build_traceability_clause_spans.rkt  check_adjudication_index.rkt  check_epistemic_safety.rkt  check_implementation_availability.sh  check_research_drift.sh  check_spec_traceability.rkt  check_spec_traceability.sh  check_traceability_clause_spans.rkt  curate_github_language_lolcode_candidates.sh  eval_tier2_corpus.rkt  eval_tier2_corpus.sh  export_traceability_graph.rkt  (+26 more)
(+1622 files in other folders)
