[tool.poetry]
name = "lolcode-interpreter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "lolcode_interpreter"}]

[tool.poetry.dependencies]
python = "^3.10"
easygui = "^0.98.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
